--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     command: uvicorn server:asgi_app --host 0.0.0.0 --port 8000
     volumes:
       - ../backend:/app
-    environment:
-      REDIS_URL: redis://redis:6379/0
-      DATABASE_URL: sqlite:///./tickets.db
+    env_file:
+      ../backend/.env
+
     ports:
       - "8000:8000"
     depends_on:
@@ -29,8 +29,7 @@ services:
     command: python -m celery -A tasks worker --loglevel=info
     volumes:
       - ../backend:/app
-    environment:
-      REDIS_URL: redis://redis:6379/0
-      DATABASE_URL: sqlite:///./tickets.db
+    env_file:
+      ../backend/.env
     depends_on:
       - redis
