--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
